updated all pages

--- a/accomodation.html
+++ b/accomodation.html
@@ -75,7 +75,9 @@
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
-                          <li><a href="accomodation.html">Accomodation</a></li>
+                          <li>
+                            <a href="Accommodation.html">Accommodation</a>
+                          </li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li>
                             <a href="poster-presentation.html"
@@ -84,7 +86,7 @@
                           </li>
                           <li>
                             <a href="paper-publication.html"
-                              >Paper publications</a
+                              >Paper Presentations</a
                             >
                           </li>
                           <li>
@@ -362,14 +364,14 @@
               </div>
               <div class="td-schedule-2-content">
                 <h5 class="td-schedule-2-title mb-15">
-                  <a href="#">In House</a>
+                  <a href="#">In-house</a>
                 </h5>
                 <div class="td-schedule-2-destination mb-15">
                   <span><i class="flaticon-gps"></i>Asrams Eluru</span>
                   <span
                     ><i class="flaticon-phone"></i>7997880487, 9491001999
                   </span>
-                  <p class="fw-bold">1250/- per day</p>
+                  <p class="fw-bold">1250/- per person per day</p>
                 </div>
               </div>
             </div>
@@ -392,7 +394,7 @@
               </div>
               <div class="td-schedule-2-content">
                 <h5 class="td-schedule-2-title mb-15">
-                  <a href="#">N Square</a>
+                  <a href="#">Hotel N Square</a>
                 </h5>
                 <div class="td-schedule-2-destination mb-15">
                   <span><i class="flaticon-gps"></i>ELURU</span>
@@ -437,7 +439,7 @@
               <div class="td-schedule-2-thumb p-relative"></div>
               <div class="td-schedule-2-content">
                 <h5 class="td-schedule-2-title mb-15">
-                  <a href="#">Aditya Central</a>
+                  <a href="#">Hotel Aditya Central</a>
                 </h5>
                 <div class="td-schedule-2-destination mb-15">
                   <span><i class="flaticon-gps"></i>ELURU</span>
@@ -455,7 +457,7 @@
               <div class="td-schedule-2-thumb p-relative"></div>
               <div class="td-schedule-2-content">
                 <h5 class="td-schedule-2-title mb-15">
-                  <a href="#">Grand Arya</a>
+                  <a href="#">Hotel Grand Arya</a>
                 </h5>
                 <div class="td-schedule-2-destination mb-15">
                   <span><i class="flaticon-gps"></i>ELURU</span>
@@ -511,7 +513,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="td-footer-links">
                       <ul>
-                        <li><a href="accomodation.html">Accomodation</a></li>
+                        <li><a href="Accommodation.html">Accommodation</a></li>
                         <li>
                           <a href="poster-presentation.html"
                             >Poster Presentation</a
@@ -519,7 +521,7 @@
                         </li>
                         <li>
                           <a href="paper-publication.html"
-                            >Paper Publications</a
+                            >Paper Presentations</a
                           >
                         </li>
                         <li><a href="register.html">Register</a></li>
