--- a/apme.html
+++ b/apme.html
@@ -149,7 +149,9 @@
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
-                          <li><a href="accomodation.html">Accomodation</a></li>
+                          <li>
+                            <a href="Accommodation.html">Accommodation</a>
+                          </li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li>
                             <a href="poster-presentation.html"
@@ -158,7 +160,7 @@
                           </li>
                           <li>
                             <a href="paper-publication.html"
-                              >Paper publications</a
+                              >Paper Presentations</a
                             >
                           </li>
                           <li>
@@ -401,7 +403,7 @@
           <div class="members-grid">
             <div class="member-card">
               <div class="member-title">Honorary Founder</div>
-              <div class="member-name">Dr. Ravi Venkatachelam</div>
+              <div class="member-name">Dr. Ch. Ravi Venkatachelam</div>
             </div>
 
             <div class="member-card">
@@ -427,14 +429,14 @@
 
             <div class="member-card">
               <div class="member-title">Vice Presidents</div>
-              <div class="member-name">Dr. V. Nageswara Rao</div>
-              <div class="member-location">Rajamundry</div>
+              <div class="member-name">Dr. Chebrolu Srinivas</div>
+              <div class="member-location">Eluru</div>
             </div>
 
             <div class="member-card">
               <div class="member-title">Vice Presidents</div>
-              <div class="member-name">Dr. Chebrolu Srinivas</div>
-              <div class="member-location">Eluru</div>
+              <div class="member-name">Dr. V. Nageswara Rao</div>
+              <div class="member-location">Rajahmundry</div>
             </div>
 
             <div class="member-card">
@@ -457,7 +459,7 @@
 
             <div class="member-card">
               <div class="member-title">Joint Secretaries</div>
-              <div class="member-name">Dr. Jayaram G</div>
+              <div class="member-name">Dr. Jayaram Gadham</div>
               <div class="member-location">Vijayawada</div>
             </div>
 
@@ -520,7 +522,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="td-footer-links">
                       <ul>
-                        <li><a href="accomodation.html">Accomodation</a></li>
+                        <li><a href="Accommodation.html">Accommodation</a></li>
                         <li>
                           <a href="poster-presentation.html"
                             >Poster Presentation</a
@@ -528,7 +530,7 @@
                         </li>
                         <li>
                           <a href="paper-publication.html"
-                            >Paper Publications</a
+                            >Paper Presentations</a
                           >
                         </li>
                         <li><a href="register.html">Register</a></li>
