--- a/committe.html
+++ b/committe.html
@@ -96,7 +96,9 @@
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
-                          <li><a href="accomodation.html">Accomodation</a></li>
+                          <li>
+                            <a href="Accommodation.html">Accommodation</a>
+                          </li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li>
                             <a href="poster-presentation.html"
@@ -105,7 +107,7 @@
                           </li>
                           <li>
                             <a href="paper-publication.html"
-                              >Paper publications</a
+                              >Paper Presentations</a
                             >
                           </li>
                           <li>
@@ -372,7 +374,7 @@
                 />
                 <br />
                 <b
-                  >Shri Dr. Gokaraju Gangaraju, <br />
+                  >Dr. Gokaraju Gangaraju, <br />
                   Chairman, ASRE Society</b
                 >
               </li>
@@ -383,7 +385,7 @@
                 />
                 <br />
                 <b
-                  >Shri Gokaraju Ranga Raju, <br />
+                  >Shri Gokaraju. V.K. Ranga Raju, <br />
                   Vice Chairman, ASRE Society</b
                 >
               </li>
@@ -456,7 +458,7 @@
                   alt=""
                 />
                 <br />
-                <span class="role-title">Organizing Chairperson:</span>
+                <span class="role-title">Organizing Chairperson</span>
                 <div>Dr. Chebrolu Srinivas</div>
               </li>
               <li class="">
@@ -465,7 +467,7 @@
                   alt=""
                 />
                 <br />
-                <span class="role-title">Organizing Co-Chairperson:</span>
+                <span class="role-title">Organizing Co-Chairperson</span>
                 <div>Dr. Venkata Venu Gopala Raju S</div>
               </li>
               <li class="">
@@ -483,7 +485,7 @@
                   alt=""
                 />
                 <br />
-                <span class="role-title">Organizing Joint Secretary:</span>
+                <span class="role-title">Organizing Joint Secretary</span>
                 <div>Dr. Priyadharshini S</div>
               </li>
               <li class="">
@@ -492,14 +494,14 @@
                   alt=""
                 />
                 <br />
-                <span class="role-title">Treasurer:</span>
+                <span class="role-title">Treasurer</span>
                 <div>Dr. Vivekanand U</div>
               </li>
             </ul>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <!-- Scientific Committee -->
             <div class="card committee-card">
               <div class="card-header">Scientific Committee</div>
@@ -520,7 +522,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <!-- Accommodation & Transportation Committee -->
             <div class="card committee-card">
               <div class="card-header">
@@ -545,7 +547,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <!-- Academic Committee -->
             <div class="card committee-card">
               <div class="card-header">Academic Committee</div>
@@ -569,7 +571,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <!-- Food Committee -->
             <div class="card committee-card">
               <div class="card-header">Food Committee</div>
@@ -593,7 +595,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <!-- Cultural Committee -->
             <div class="card committee-card">
               <div class="card-header">Cultural Committee</div>
@@ -615,7 +617,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <!-- IT Committee -->
             <div class="card committee-card">
               <div class="card-header">IT Committee</div>
@@ -638,7 +640,7 @@
             </div>
           </div>
 
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <!-- Inaugural Team & Reception Committee -->
             <div class="card committee-card">
               <div class="card-header">
@@ -662,7 +664,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <!-- Registration Committee -->
             <div class="card committee-card">
               <div class="card-header">Registration Committee</div>
@@ -685,9 +687,9 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <div class="card committee-card">
-              <div class="card-header">INFRASTRUCTURE & LOGISTICS</div>
+              <div class="card-header">Infrastructure & Logistics</div>
               <div class="card-body">
                 <ul>
                   <li>
@@ -702,9 +704,9 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <div class="card committee-card">
-              <div class="card-header">COMMITTEE COORDINATOR</div>
+              <div class="card-header">Committee Coordinator</div>
               <div class="card-body">
                 <ul>
                   <li>
@@ -719,9 +721,9 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-3">
             <div class="card committee-card">
-              <div class="card-header">WEBSITE COORDINATOR</div>
+              <div class="card-header">Website Coordinator</div>
               <div class="card-body">
                 <ul>
                   <li>
@@ -783,7 +785,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="td-footer-links">
                       <ul>
-                        <li><a href="accomodation.html">Accomodation</a></li>
+                        <li><a href="Accommodation.html">Accommodation</a></li>
                         <li>
                           <a href="poster-presentation.html"
                             >Poster Presentation</a
@@ -791,7 +793,7 @@
                         </li>
                         <li>
                           <a href="paper-publication.html"
-                            >Paper Publications</a
+                            >Paper Presentations</a
                           >
                         </li>
                         <li><a href="register.html">Register</a></li>
