--- a/e-poster.html
+++ b/e-poster.html
@@ -75,7 +75,9 @@
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
-                          <li><a href="accomodation.html">Accomodation</a></li>
+                          <li>
+                            <a href="Accommodation.html">Accommodation</a>
+                          </li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li>
                             <a href="poster-presentation.html"
@@ -84,7 +86,7 @@
                           </li>
                           <li>
                             <a href="paper-publication.html"
-                              >Paper publications</a
+                              >Paper Presentations</a
                             >
                           </li>
                           <li>
@@ -337,7 +339,7 @@
                 ><a
                   href="http://atomicityit.com/demos/asram/uploads/GUIDELINES FOR ABSTRACT SUBMISSION - APMEDICON' 2025.pdf"
                 >
-                  GUIDELINES FOR ABSTRACT SUBMISSION - APMEDICON' 2025
+                  GUIDELINES FOR ABSTRACT SUBMISSION - APMEDUCON' 2025
                 </a></span
               >
               <span class="td-section-subtitle td-section-subtitle-2 mb-30"
@@ -408,7 +410,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="td-footer-links">
                       <ul>
-                        <li><a href="accomodation.html">Accomodation</a></li>
+                        <li><a href="Accommodation.html">Accommodation</a></li>
                         <li>
                           <a href="poster-presentation.html"
                             >Poster Presentation</a
@@ -416,7 +418,7 @@
                         </li>
                         <li>
                           <a href="paper-publication.html"
-                            >Paper Publications</a
+                            >Paper Presentations</a
                           >
                         </li>
                         <li><a href="register.html">Register</a></li>
