--- a/poster-presentation.html
+++ b/poster-presentation.html
@@ -80,7 +80,7 @@
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
-                          <li><a href="accomodation.html">Accomodation</a></li>
+                          <li><a href="Accommodation.html">Accommodation</a></li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li>
                             <a href="poster-presentation.html"
@@ -89,7 +89,7 @@
                           </li>
                           <li>
                             <a href="paper-publication.html"
-                              >Paper publications</a
+                              >Paper Presentations</a
                             >
                           </li>
                           <li>
@@ -345,11 +345,11 @@
                   >E-Poster Presentation</span
                 >
                 <h2 class="td-section-title">E-Poster Presentation</h2>
-                <p class="td-section-text">
+                <!-- <p class="td-section-text">
                   Like previous year this year we are arranging world marketing
                   <br />
                   summit 2025. Its the gathering of all the big
-                </p>
+                </p> -->
               </div>
               <div
                 class="nav td-schedule-tab-btn justify-content-center mb-30"
@@ -731,9 +731,9 @@
                     <div class="td-footer-links">
                       <ul>
                         
-                        <li><a href="accomodation.html">Accomodation</a></li>
+                        <li><a href="Accommodation.html">Accommodation</a></li>
                         <li><a href="poster-presentation.html">Poster Presentation</a></li>
-                        <li><a href="paper-publication.html">Paper Publications</a></li>
+                        <li><a href="paper-publication.html">Paper Presentations</a></li>
                         <li><a href="register.html">Register</a></li>
                                <li><a href="contact.html">Contact</a></li>
                       </ul>
