--- a/registration.html
+++ b/registration.html
@@ -216,7 +216,9 @@
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
-                          <li><a href="accomodation.html">Accomodation</a></li>
+                          <li>
+                            <a href="Accommodation.html">Accommodation</a>
+                          </li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li>
                             <a href="poster-presentation.html"
@@ -225,7 +227,7 @@
                           </li>
                           <li>
                             <a href="paper-publication.html"
-                              >Paper publications</a
+                              >Paper Presentations</a
                             >
                           </li>
                           <li>
@@ -465,19 +467,21 @@
       <div class="container">
         <div class="d-flex align-items-center justify-content-between">
           <h1>Pre-Conference Workshops</h1>
-          <a href="register.html" class="mb-0 fs-5 fs-lg-4 text-primary"
+          <a
+            href="register.html"
+            class="mb-0 fs-5 fs-lg-4 text-primary animatedBtn"
             >Register Here</a
           >
         </div>
 
         <div class="section">
-          <div class="section-title">Workshop Pricing</div>
+          <div class="section-title">Registration fees</div>
           <table class="pricing-table">
             <thead>
               <tr>
                 <th>Type of Delegate</th>
-                <th>Early bird (upto Apr 31st 2025)</th>
-                <th>Later (from May 1st 2025 & Spot)</th>
+                <th>Early bird (upto 30th Apr 2025)</th>
+                <th>May 1st 2025 Onwards & Spot</th>
               </tr>
             </thead>
             <tbody>
@@ -489,22 +493,24 @@
             </tbody>
           </table>
           <div class="note">
-            *Workshop 1-40 Participants limit<br />*Workshop 2-30 Participants
-            Limit
+            *PCW 1 - 40 Participants limit<br />*PCW 2 - 30 Participants Limit
           </div>
         </div>
 
         <h1>Conference</h1>
 
         <div class="section">
-          <div class="section-title">Conference Pricing</div>
+          <div class="section-title">Registration fees</div>
           <table class="pricing-table">
             <thead>
               <tr>
                 <th>Type of Delegate</th>
-                <th>Early bird (upto Apr 31st 2025)</th>
-                <th>Later (from May 1st 2025)</th>
-                <th>Spot Hampers based on Availability</th>
+                <th>Early bird (upto Apr 30th 2025)</th>
+                <th>May 1st 2025 Onwards</th>
+                <th>
+                  Spot Registrations based on Availability (Kit based on
+                  availability)
+                </th>
               </tr>
             </thead>
             <tbody>
@@ -542,7 +548,14 @@
           </table>
         </div>
 
-        <div class="footer-note">Not Inclusive of GST (18%)</div>
+        <div class="">
+          <b>Cancellation Policy:</b> Registration refunds will be processed
+          only for email requests submitted before May 15th, 2025. · No refund
+          requests will be accepted after May 15th, 2025. · For cancellations
+          made before May 15th, a 25% processing fee will be deducted, and the
+          remaining amount will be refunded one month after the conference
+          concludes.
+        </div>
       </div>
 
       <!-- end container -->
@@ -590,7 +603,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="td-footer-links">
                       <ul>
-                        <li><a href="accomodation.html">Accomodation</a></li>
+                        <li><a href="Accommodation.html">Accommodation</a></li>
                         <li>
                           <a href="poster-presentation.html"
                             >Poster Presentation</a
@@ -598,7 +611,7 @@
                         </li>
                         <li>
                           <a href="paper-publication.html"
-                            >Paper Publications</a
+                            >Paper Presentations</a
                           >
                         </li>
                         <li><a href="register.html">Register</a></li>
