--- a/team.html
+++ b/team.html
@@ -191,7 +191,7 @@
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
-                          <li><a href="accomodation.html">Accomodation</a></li>
+                          <li><a href="Accommodation.html">Accommodation</a></li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li>
                             <a href="poster-presentation.html"
@@ -200,7 +200,7 @@
                           </li>
                           <li>
                             <a href="paper-publication.html"
-                              >Paper publications</a
+                              >Paper Presentations</a
                             >
                           </li>
                           <li>
@@ -440,7 +440,7 @@
 
       <!-- td-team-area-start -->
       <div class="td-team-area pt-140 pb-115 p-relative fix">
-        <h2 class="td-team-bigtext mb-0">SPEKAERS</h2>
+        <h2 class="td-team-bigtext mb-0">SPEAKERS</h2>
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -527,7 +527,7 @@
                           <a href="http://atomicityit.com/demos/asram/uploads/KGS_BriefCV.pdf">Dr. Krishna G Seshadri </a>
                         </h3>
                         <span class="td-team-member-position"
-                          >- Dr. G. Gangaraju Oration</span
+                          >Dr. G. Gangaraju Oration</span
                         >
                       </div>
                       <div class="td-team-thumb text-center">
@@ -551,7 +551,7 @@
                         <h3 class="td-team-member-name mb-0">
                           <a
                             href="http://atomicityit.com/demos/asram/uploads/Dr%20Dinesh%20CV_CMCL%202025.pdf"
-                            >Dr. Dinesh Badyal</a
+                            >Dr. Dinesh K Badyal</a
                           >
                         </h3>
                         <span class="td-team-member-position"
@@ -719,7 +719,7 @@
                     <div class="sPkSection">
                       <div class="sPkSectionTitle">Esteemed Speakers</div>
                       <ul class="sPkList">
-                        <li class="sPkListItem">Dr. Ravi Venkatachelam</li>
+                        <li class="sPkListItem">Dr. Ch. Ravi Venkatachelam</li>
                         <li class="sPkListItem">Dr. B. Devi Madhavi</li>
                         <li class="sPkListItem">Dr. P.S.N Raju</li>
                         <li class="sPkListItem">Dr. D.S. Murthy</li>
@@ -735,6 +735,8 @@
                         <li class="sPkListItem">Dr. D. Lakshmi Lalitha</li>
                         <li class="sPkListItem">Dr. S.P. Rao</li>
                         <li class="sPkListItem">Dr. Gitanjali Batmanabane</li>
+                        <li class="sPkListItem"> Dr. Nageswara Rao  V</li>
+                        <li class="sPkListItem">Dr. Lavanya K.M</li>
                       </ul>
                     </div>
                   </div>
@@ -757,7 +759,7 @@
                       </div>
 
                       <div class="member-card">
-                        <div class="member-name">Dr.V. Nageswara Rao</div>
+                        <div class="member-name">Dr. V. Nageswara Rao</div>
                       </div>
 
                       <div class="member-card">
@@ -765,7 +767,7 @@
                       </div>
 
                       <div class="member-card">
-                        <div class="member-name">Dr.Neeharika Balla</div>
+                        <div class="member-name">Dr. Neeharika Balla</div>
                       </div>
                     </div>
                   </div>
@@ -797,7 +799,7 @@
                     <div class="members-grid">
                       <div class="member-card">
                         <div class="member-name">
-                          Dr.S.V. Venu Gopal Raju
+                          Dr. S.V. Venu Gopal Raju
                         </div>
                       </div>
 
@@ -810,11 +812,11 @@
                     <div class="section-title">Conference Day-2 Moderators</div>
                     <div class="members-grid">
                       <div class="member-card">
-                        <div class="member-name">Dr.K. Jithendra</div>
+                        <div class="member-name">Dr. K. Jithendra</div>
                       </div>
 
                       <div class="member-card">
-                        <div class="member-name">Dr.G. Vahini</div>
+                        <div class="member-name">Dr. G. Vahini</div>
                       </div>
                       </div>
                     </div>
@@ -871,7 +873,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="td-footer-links">
                       <ul>
-                        <li><a href="accomodation.html">Accomodation</a></li>
+                        <li><a href="Accommodation.html">Accommodation</a></li>
                         <li>
                           <a href="poster-presentation.html"
                             >Poster Presentation</a
@@ -879,7 +881,7 @@
                         </li>
                         <li>
                           <a href="paper-publication.html"
-                            >Paper Publications</a
+                            >Paper Presentations</a
                           >
                         </li>
                         <li><a href="register.html">Register</a></li>
