--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
-                          <li><a href="accomodation.html">Accomodation</a></li>
+                          <li><a href="Accommodation.html">Accommodation</a></li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li><a href="poster-presentation.html">Poster Presentation</a></li>
                           <li>
-                            <a href="paper-publication.html">Paper publications</a>
+                            <a href="paper-publication.html">Paper Presentations</a>
                           </li>
                             <li>
                             <a href="contact.html">Contact Us</a>
@@ -341,7 +341,7 @@ KAUSALA VARDHANAM
                   href="registration.html"
                 >
                   <span class="mr10 td-text d-inline-block mr-5"
-                    >Registration Now</span
+                    >Register Now</span
                   >
                   <span class="td-arrow-angle">
                     <svg
@@ -434,12 +434,12 @@ KAUSALA VARDHANAM
                     >About Conference</span
                   >
                   <h2 class="td-section-title mb-1">
-                  15th Annual State Conference of AP Medical Educators Association (AP MEDUCON 2025)
+                  15th Annual State Conference of Andhra Pradesh Medical Educators Association (APMEDUCON 2025)
                   </h2>
-                  <p class="para para-2 mb-30">
+                  <p class=" para-2 mb-30">
                     Hosted by Alluri Sitarama Raju Academy of Medical Sciences, Eluru
                   </p>
-                  <p class="para mb-40">
+                  <p class=" mb-40">
 Ensuring the acquisition of essential skills in medical students is crucial for producing competent healthcare professionals. Medical educators are pivotal in helping students develop critical clinical, communication, and problem-solving skills necessary for effective practice. By emphasizing skill acquisition, educators enable students to connect theoretical knowledge with practical application, preparing them for complex patient care situations. Additionally, fostering skills like adaptability, professionalism, and a commitment to lifelong learning ensures students can thrive in a constantly evolving healthcare landscape. Prioritizing skill development equips students to meet current medical standards and contribute to the ongoing progress of the healthcare field.
                   </p>
                 </div>
@@ -471,7 +471,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <img src="./assets/img/logo/knee.svg" alt="">
                 </span>
                 <h3 class="td-about-title mb-0">
-                  PCW - 2 <br>27th June 2025 2AM - 5PM
+                  PCW - 2 <br>27th June 2025 2PM - 5PM
                 </h3>
               </div>
             </div>
@@ -624,7 +624,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                           <a href="team.html">Dr. Krishna G Seshadri </a>
                         </h3>
                         <span class="td-team-member-position"
-                          >- Dr. G. Gangaraju Oration</span
+                          >Dr. G. Gangaraju Oration</span
                         >
                       </div>
                       <div class="td-team-thumb text-center">
@@ -740,7 +740,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                                    >
                                      <div class="td-team-content">
                                        <h3 class="td-team-member-name mb-0">
-                      <a href="team.html"> SHRI DR. GOKARAJU GANGARAJU, 
+                      <a href="team.html"> DR. GOKARAJU GANGARAJU, 
 </a>
                                        </h3>
                                        <span class="td-team-member-position"
@@ -764,7 +764,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                                    >
                                      <div class="td-team-content">
                                        <h3 class="td-team-member-name mb-0">
-                      <a href="team-details.html">SHRI GOKARAJU RANGARAJU, 
+                      <a href="team-details.html">SHRI GOKARAJU. <br>V.K. RANGA RAJU, 
 
 </a>
                                        </h3>
@@ -787,7 +787,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                                    >
                                      <div class="td-team-content">
                                        <h3 class="td-team-member-name mb-0">
-                      <a href="team-details.html">SHRI GOKARAJU RAMARAJU
+                      <a href="team-details.html">SHRI GOKARAJU RAMA RAJU
 </a>
                                        </h3>
                                        <span class="td-team-member-position">SECRETARY, ASRE SOCIETY</span>
@@ -870,7 +870,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                                    >
                                      <div class="td-team-content">
                                        <h3 class="td-team-member-name mb-0">
-                      <a href="team-details.html">Dr. Ravi Venkatachelam </a>
+                      <a href="team-details.html">Dr. Ch. Ravi Venkatachelam </a>
                                        </h3>
                                        <span class="td-team-member-position">Honorary Founder</span>
                                      </div>
@@ -954,7 +954,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                   data-wow-duration=".9s"
                   data-wow-delay=".4s"
                 >
-                  Showcasing Innovative Research & Advancements in Healthcare
+                  Showcasing Innovative Research & Advancements in Medical Education
                 </h2>
                 <!-- <p
                   class="mb-35 wow fadeInLeft"
@@ -1278,12 +1278,12 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <td data-label="Time" class="time-col">12.15 PM - 01.00 PM</td>
                     <td data-label="Topic" class="topic-col">
                         Panel discussion: Bridging the Gap Between Learning & Clinical Competence "Are We The All or Pregating Learners for Real-World Critical Practices?"<br>
-                        <small>Moderator: Dr.Venkata Veru Gopala Raju S</small>
+                        <small>Moderator: Dr. Venkata Veru Gopala Raju S</small>
                     </td>
                     <td data-label="Speaker" class="speaker-col">
-                        Dr. Ravi Venkatachalam<br>
-                        Dr. BJovol Madhavi<br>
-                        Dr. PSN Raju<br>
+                        Dr. Ch. Ravi Venkatachalam<br>
+                        Dr. B. Devi Madhavi<br>
+                        Dr. P.S.N. Raju<br>
                         Dr. D.S Murthy.
                     </td>
                 </tr>
@@ -1318,7 +1318,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                         Debate- Standardization vs Personalization in Medical training: Should medical skill I/II and II assessment be Standardized for all or adapted to individual needs?<br>
                         <small>Moderator - Dr. Vinay Kumar Sayeli</small>
                     </td>
-                    <td data-label="Speaker" class="speaker-col">Dr. Sravanan Sanniyasi Vs <br> Dr. Sushant Mishra.</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. Saravanan Sanniyasi Vs <br> Dr. Sushant Mishra.</td>
                 </tr>
                 <tr>
                     <td data-label="Venue">Will be Announced</td>
@@ -1376,7 +1376,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <td data-label="Time" class="time-col">09.40 AM - 10.20 AM</td>
                     <td data-label="Topic" class="topic-col">
                         Interdisciplinary Collaborations Working with Nurses, Therapists and Anti-Hesitful Professionals<br>
-                        <small>Moderator- Dr. K.Ithandra</small>
+                        <small>Moderator- Dr. K.Jithendra</small>
                     </td>
                     <td data-label="Speaker" class="speaker-col">
                         Dr. Siva Prabodh,<br>
@@ -1401,26 +1401,26 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <td data-label="Time" class="time-col">11.10 AM - 11.45 AM</td>
                     <td data-label="Topic" class="topic-col">
                         Panel discussion- How Can We Ensure That Assessment Methods Truly Reflect Clinical Readiness?<br>
-                        <small>Moderator- Dr. G.Vehni</small>
+                        <small>Moderator- Dr. G.Vahini</small>
                     </td>
                     <td data-label="Speaker" class="speaker-col">
-                        Dr. Kireeti,<br>
-                        Dr. Swathi Poorninma Madal<br>
-                        Dr. P.J.Srinivas,<br>
-                        Dr. D.Lakshmi Lalitha,
+                        Dr. A.S. Kireeti,<br>
+                        Dr. Swathi Poorninma Madala<br>
+                        Dr. P.J. Srinivas,<br>
+                        Dr. D. Lakshmi Lalitha,
                     </td>
                 </tr>
                 <tr>
                     <td data-label="Theme"></td>
                     <td data-label="Time" class="time-col">11.45 AM - 12.15 PM</td>
                     <td data-label="Topic">Principles & Strategies for Breaking Bad News</td>
-                    <td data-label="Speaker" class="speaker-col">Dr. S. P.Rao</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. S. P. Rao</td>
                 </tr>
                 <tr>
                     <td data-label="Theme"></td>
                     <td data-label="Time" class="time-col">12.15 PM - 01.00 PM</td>
                     <td data-label="Topic">Handling Emotional Responses & Difficult Scenarios</td>
-                    <td data-label="Speaker" class="speaker-col">Dr. Geetanjali Batmanabane</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. Gitanjali Batmanabane</td>
                 </tr>
                 <tr>
                     <td data-label="Theme"></td>
@@ -1483,7 +1483,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                       <div class="td-schedule-3-content">
                         <h2 class="td-schedule-3-title">
                           <a href="contact.html"
-                            >On 29th Morning excursion to Dwaraka Tirumala Temple sponsered by ASRAMS at 5:30 AM </a
+                            > Excursion to Dwaraka Tirumala Temple Sponsored by ASRAMS at 5:30 AM on 29th June 2025 </a
                           >
                         </h2>
                         <!-- <div class="td-schedule-3-destination mb-10">
@@ -1791,7 +1791,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                   /></a>
                 </div>
                 <p class="text mb-10">
-                  ASRAMS MEDICAL COLLEGE, Eluru - 534005 AP, India
+                  ASRAMS, <br> Eluru - 534005 AP, India
                 </p>
                  <div class="td-footer-logo mb-20">
                   <a href="index.html"
@@ -1824,9 +1824,9 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <div class="td-footer-links">
                       <ul>
                         
-                        <li><a href="accomodation.html">Accomodation</a></li>
+                        <li><a href="Accommodation.html">Accommodation</a></li>
                         <li><a href="poster-presentation.html">Poster Presentation</a></li>
-                        <li><a href="paper-publication.html">Paper Publications</a></li>
+                        <li><a href="paper-publication.html">Paper Presentations</a></li>
                         <li><a href="register.html">Register</a></li>
                                <li><a href="contact.html">Contact</a></li>
                       </ul>
